[package]
name = "fst-sys"
version = "0.2.0"
authors = ["Thomas Hiscock <thomash000@gmail.com>"]
edition = "2018"
repository = "https://github.com/thomashk0/fst-sys.git"
description = "Bindings for GTKWave FST file manipulation API."
readme = "README.md"
license = "MIT"
include = ["src/*", "Cargo.toml", "README.md", "LICENSE.txt", "fstapi/*.c", "fstapi/*.h", "assets/fst/*.fst"]
categories = ["external-ffi-bindings" ]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"

[[test]]
name = "basics"
